--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/Saving.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/Saving.cshtml
@@ -60,7 +60,7 @@
                                     <div class="l-form__input">
                                         <div class="o-unitbox">
                                             <input id="Target" type="number" value="100" class="o-unitbox__input o-unitbox__input--full o-unitbox__input--calc"
-                                                   oninput="if(!/^\d*\.?\d*$/.test(this.value)) this.value = this.value.slice(0, -1)"
+                                                   oninput="if(!/^\d*\.?\d{0,4}$/.test(this.value)) this.value = this.value.slice(0, -1)"
                                                    onkeydown="return (event.key === '.' || event.key === 'Backspace' || event.key === 'Delete' || (event.key >= '0' && event.key <= '9') || (event.key >= 'Numpad0' && event.key <= 'Numpad9') || event.key === 'ArrowLeft' || event.key === 'ArrowRight' || event.key === 'Tab' || event.key === 'Enter' || event.ctrlKey || event.metaKey)">
                                             <span class="o-unitbox__text">萬元</span>
                                         </div>
@@ -111,7 +111,7 @@
                                     <div class="l-form__input">
                                         <div class="o-unitbox">
                                             <input id="Prepared" type="number" value="0" class="o-unitbox__input o-unitbox__input--full o-unitbox__input--calc"
-                                                   oninput="if(!/^\d*\.?\d*$/.test(this.value)) this.value = this.value.slice(0, -1)"
+                                                   oninput="if(!/^\d*\.?\d{0,4}$/.test(this.value)) this.value = this.value.slice(0, -1)"
                                                    onkeydown="return (event.key === '.' || event.key === 'Backspace' || event.key === 'Delete' || (event.key >= '0' && event.key <= '9') || (event.key >= 'Numpad0' && event.key <= 'Numpad9') || event.key === 'ArrowLeft' || event.key === 'ArrowRight' || event.key === 'Tab' || event.key === 'Enter' || event.ctrlKey || event.metaKey)">
                                             <span class="o-unitbox__text">萬元</span>
                                         </div>
@@ -133,7 +133,7 @@
                                     <div class="l-form__input">
                                         <div class="o-unitbox">
                                             <input id="Monthly" type="number" value="1" class="o-unitbox__input o-unitbox__input--full o-unitbox__input--calc" data-id="monthly"
-                                                   oninput="if(!/^\d*\.?\d*$/.test(this.value)) this.value = this.value.slice(0, -1)"
+                                                   oninput="if(!/^\d*\.?\d{0,4}$/.test(this.value)) this.value = this.value.slice(0, -1)"
                                                    onkeydown="return (event.key === '.' || event.key === 'Backspace' || event.key === 'Delete' || (event.key >= '0' && event.key <= '9') || (event.key >= 'Numpad0' && event.key <= 'Numpad9') || event.key === 'ArrowLeft' || event.key === 'ArrowRight' || event.key === 'Tab' || event.key === 'Enter' || event.ctrlKey || event.metaKey)">
                                             <span class="o-unitbox__text">萬元</span>
                                         </div>
@@ -219,7 +219,7 @@
                                     <div class="l-form__input">
                                         <div class="o-unitbox">
                                             <input id="TargetRemark" type="number" value="100" class="o-unitbox__input o-unitbox__input--full o-unitbox__input--calc"
-                                                   oninput="if(!/^\d*\.?\d*$/.test(this.value)) this.value = this.value.slice(0, -1)"
+                                                   oninput="if(!/^\d*\.?\d{0,4}$/.test(this.value)) this.value = this.value.slice(0, -1)"
                                                    onkeydown="return (event.key === '.' || event.key === 'Backspace' || event.key === 'Delete' || (event.key >= '0' && event.key <= '9') || (event.key >= 'Numpad0' && event.key <= 'Numpad9') || event.key === 'ArrowLeft' || event.key === 'ArrowRight' || event.key === 'Tab' || event.key === 'Enter' || event.ctrlKey || event.metaKey)">
                                             <span class="o-unitbox__text">萬元</span>
                                         </div>
@@ -263,7 +263,7 @@
                                     <div class="l-form__input">
                                         <div class="o-unitbox">
                                             <input id="PreparedRemark" type="number" value="0" class="o-unitbox__input o-unitbox__input--full o-unitbox__input--calc"
-                                                   oninput="if(!/^\d*\.?\d*$/.test(this.value)) this.value = this.value.slice(0, -1)"
+                                                   oninput="if(!/^\d*\.?\d{0,4}$/.test(this.value)) this.value = this.value.slice(0, -1)"
                                                    onkeydown="return (event.key === '.' || event.key === 'Backspace' || event.key === 'Delete' || (event.key >= '0' && event.key <= '9') || (event.key >= 'Numpad0' && event.key <= 'Numpad9') || event.key === 'ArrowLeft' || event.key === 'ArrowRight' || event.key === 'Tab' || event.key === 'Enter' || event.ctrlKey || event.metaKey)">
                                             <span class="o-unitbox__text">萬元</span>
                                         </div>
@@ -285,7 +285,7 @@
                                     <div class="l-form__input">
                                         <div class="o-unitbox">
                                             <input id="MonthlyRemark" type="number" value="1" class="o-unitbox__input o-unitbox__input--full o-unitbox__input--calc" data-id="popup_monthly"
-                                                   oninput="if(!/^\d*\.?\d*$/.test(this.value)) this.value = this.value.slice(0, -1)"
+                                                   oninput="if(!/^\d*\.?\d{0,4}$/.test(this.value)) this.value = this.value.slice(0, -1)"
                                                    onkeydown="return (event.key === '.' || event.key === 'Backspace' || event.key === 'Delete' || (event.key >= '0' && event.key <= '9') || (event.key >= 'Numpad0' && event.key <= 'Numpad9') || event.key === 'ArrowLeft' || event.key === 'ArrowRight' || event.key === 'Tab' || event.key === 'Enter' || event.ctrlKey || event.metaKey)">
                                             <span class="o-unitbox__text">萬元</span>
                                         </div>
