--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/InterestedFund/InterestedFund.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/InterestedFund/InterestedFund.cshtml
@@ -108,6 +108,8 @@
                 spaceBetween: 16,
                 autoplay: false,
                 loop: true,
+                observer: true,
+                observeParents: true,
                 breakpoints: {
                     1200: {
                         slidesPerGroup: 3,
