修正"你可能也有興趣"元件跑版問題

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundSearch/FundSearch.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundSearch/FundSearch.cshtml
@@ -2227,8 +2227,11 @@
 
                             let isEmpty = result.length == 0;
 
-                            $('#interestedFund').addClass('interested-hidden');
-                            $('#interestedFund').show();
+                            if (isEmpty) {
+                                $('#interestedFund').show();
+                            } else {
+                                $('#interestedFund').addClass('interested-hidden');
+                            }
 
                             setTimeout(() => {
                                 if (isEmpty) {
