--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/IndexRecommendation/IndexRecommendation.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/IndexRecommendation/IndexRecommendation.cshtml
@@ -165,34 +165,48 @@
                                         <td class="c-cardTable__body" data-card-table-width="1/2">
                                             <div class="c-cardTable__title" data-length="5">當日漲跌幅</div>
                                             <div class="c-cardTable__content">
-                                                @if (item.PercentageChangeInFundPrice < 0)
+                                                @if (item.PercentageChangeInFundPrice != null)
                                                 {
-                                                    <span class="o-fall">@item.PercentageChangeInFundPriceFormat%</span>
-                                                }
-                                                else if (item.PercentageChangeInFundPrice == 0)
-                                                {
-                                                    <span>@item.PercentageChangeInFundPriceFormat%</span>
+                                                    if (item.PercentageChangeInFundPrice < 0)
+                                                    {
+                                                        <span class="o-fall">@item.PercentageChangeInFundPriceFormat%</span>
+                                                    }
+                                                    else if (item.PercentageChangeInFundPrice == 0)
+                                                    {
+                                                        <span>@item.PercentageChangeInFundPrice%</span>
+                                                    }
+                                                    else
+                                                    {
+                                                        <span class="o-rise">@item.PercentageChangeInFundPrice%</span>
+                                                    }
                                                 }
                                                 else
                                                 {
-                                                    <span class="o-rise">@item.PercentageChangeInFundPrice%</span>
+                                                    <span>-</span>
                                                 }
                                             </div>
                                         </td>
                                         <td class="c-cardTable__body" data-card-table-width="1/2">
                                             <div class="c-cardTable__title" data-length="5">6個月績效</div>
                                             <div class="c-cardTable__content">
-                                                @if (item.SixMonthReturnOriginalCurrency < 0)
+                                                @if (item.PercentageChangeInFundPrice != null)
                                                 {
-                                                    <span class="o-fall">@item.SixMonthReturnOriginalCurrencyFormat%</span>
-                                                }
-                                                else if (item.SixMonthReturnOriginalCurrency == 0)
-                                                {
-                                                    <span>@item.SixMonthReturnOriginalCurrencyFormat%</span>
+                                                    if (item.SixMonthReturnOriginalCurrency < 0)
+                                                    {
+                                                        <span class="o-fall">@item.SixMonthReturnOriginalCurrencyFormat%</span>
+                                                    }
+                                                    else if (item.SixMonthReturnOriginalCurrency == 0)
+                                                    {
+                                                        <span>@item.SixMonthReturnOriginalCurrency%</span>
+                                                    }
+                                                    else
+                                                    {
+                                                        <span class="o-rise">@item.SixMonthReturnOriginalCurrency%</span>
+                                                    }
                                                 }
                                                 else
                                                 {
-                                                    <span class="o-rise">@item.SixMonthReturnOriginalCurrency%</span>
+                                                    <span>-</span>
                                                 }
                                             </div>
                                         </td>
