#4889 遠距tab六碼遮罩跑版調整

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/EmployeeConsult.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/EmployeeConsult.cshtml
@@ -17,6 +17,11 @@
 
 @if (Model.NeedEmployeeCode)
 {
+    <style>
+        .c-section--locker {
+            margin-top: 0px;
+        }
+    </style>
     <div class="l-wrap" id="step00">
         <div class="c-calcLocker__icon">
             <img src="~/themes/images/icons/others/lock.svg" alt="">
