到價通知基準淨值樣式調整
- 關注清單結果列表頭"淨值/漲跌幅通知"改為"到價通知設定"
- 關注清單結果列的灰字移除
- 將到價通知預設值及日期放在「設定到價通知」彈窗，且呈現文字為綠色

--- a/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Popup.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Popup.cshtml
@@ -260,6 +260,16 @@
                         <!-- is-active: 作用中的項目 -->
                         <div class="c-tab__panel c-tab__panel--closer is-active" data-tab-panel-id="tab-popup-1">
                             <div class="l-flex u-flex-col u-flex-gap-lg">
+                                <div class="l-flex__item" data-reachvalue>
+                                    <div class="l-flex">
+                                        <div class="l-flex__item">
+                                            <span class="t-push" data-info-pricevalue></span>
+                                        </div>
+                                        <div class="l-flex__item l-flex__item--auto">
+                                            <span class="t-push" data-info-reachvaluesetdate></span>
+                                        </div>
+                                    </div>
+                                </div>
                                 <div class="l-flex__item">
                                     <div class="l-flex">
                                         <div class="l-flex__item">
@@ -351,6 +361,16 @@
                         </div>
                         <div class="c-tab__panel c-tab__panel--closer" data-tab-panel-id="tab-popup-2">
                             <div class="l-flex u-flex-col u-flex-gap-lg">
+                                <div class="l-flex__item" data-quotechange>
+                                    <div class="l-flex">
+                                        <div class="l-flex__item">
+                                            <span class="t-push" data-info-risefallpricevalue></span>
+                                        </div>
+                                        <div class="l-flex__item l-flex__item--auto">
+                                            <span class="t-push" data-info-quotechangesetdate></span>
+                                        </div>
+                                    </div>
+                                </div>
                                 <div class="l-flex__item">
                                     <div class="l-flex">
                                         <div class="l-flex__item">
