--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FocusList/_FundList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FocusList/_FundList.cshtml
@@ -98,7 +98,7 @@
                         </th>
                         <th>
                             <div class="c-table__title">
-                                <span>淨值/<br>漲跌幅通知</span>
+                                <span>到價通知設定</span>
                             </div>
                         </th>
                         <th>
@@ -207,26 +207,20 @@
                         </div>
                     </td>
                     <td class="c-cardTable__body c-cardTable__body--line" data-card-table-width="1/1">
-                        <div class="c-cardTable__title" data-length="5">淨值/<br>漲跌幅通知</div>
+                        <div class="c-cardTable__title" data-length="5">到價通知設定</div>
                          <div class="c-cardTable__content" data-infostatus="<% if (Info != null && Info.ReachValueOpen || Info != null && Info.QuoteChangeOpen){%><%= 'true' %><% } else {%><%= 'false' %> <%}%>">
                           <% if (Info  == null　|| (!Info.ReachValueOpen && !Info.QuoteChangeOpen) ) { %>
                             <div class="t-tip--lt">點鈴鐺設定到價通知</div>
                             <% } else {%>
                             <% if (Info.ReachValueOpen && Info.ReachValue  != null ) { %>
-                            <div class="l-straight@lt">
-                                     <div class="l-straight__item">
-                                          <span class="<% if ( (Info.ReachValue >= Info.PriceValue &&  Info.ReachValue <= NetAssetValue) || (Info.ReachValue <= Info.PriceValue &&  Info.ReachValue >= NetAssetValue)){%><%= 'o-iconText o-iconText--tick t-warning' %><% }%>" data-after="淨值 <%= Info.ReachValue %>"></span>
-                                    </div>
-                                        <div class="l-straight__item">
-                                                  <span class="t-date" data-after="設定淨值 <%= Info.PriceValue %>"></span>
-                                        </div>
-                                            <div class="l-straight__item">
-                                                      <span class="t-date" data-after="設定日期 <%= Info.ReachValueSetDate %>"></span>
-                                            </div>
+                            <div class="l-straight@lt" data-info-pricevalue="<%= Info.PriceValue %>" data-info-reachvaluesetdate="<%= Info.ReachValueSetDate %>">
+                                <div class="l-straight__item">
+                                    <span class="<% if ( (Info.ReachValue >= Info.PriceValue &&  Info.ReachValue <= NetAssetValue) || (Info.ReachValue <= Info.PriceValue &&  Info.ReachValue >= NetAssetValue)){%><%= 'o-iconText o-iconText--tick t-warning' %><% }%>" data-after="淨值 <%= Info.ReachValue %>"></span>
+                                </div>
                             </div>
                             <% } %>
                                <% if (Info.QuoteChangeOpen && (Info.RisePercent  != null  || Info.FallPercent != null )) { %>
-                            <div class="l-straight@lt">
+                            <div class="l-straight@lt"  data-info-risefallpricevalue="<%= Info.RiseFallPriceValue %>" data-info-quotechangesetdate="<%= Info.QuoteChangeSetDate %>">
                                 <% if (Info.RisePercent  != null ) { %>
                                 <div class="l-straight__item">
                                     <span class="<% if (NetAssetValue >= Info.RiseValue){%><%= 'o-iconText o-iconText--tick t-warning' %><% }%>" data-after="漲幅 <%= Info.RisePercent %>%"></span>
@@ -237,14 +231,6 @@
                                     <span class="<% if (NetAssetValue <= Info.FallValue){%><%= 'o-iconText o-iconText--tick t-warning' %><% }%>" data-after="跌幅 <%= Info.FallPercent %>%"></span>
                                 </div>
                                 <% } %>
-                                <% if (Info.RisePercent  != null　|| Info.FallPercent  != null ) { %>
-                                          <div class="l-straight__item">
-                                                <span class="t-date" data-after="設定淨值 <%= Info.RiseFallPriceValue %>"></span>
-                                        </div>
-                                             <div class="l-straight__item">
-                                                      <span class="t-date" data-after="設定日期 <%= Info.QuoteChangeSetDate %>"></span>
-                                            </div>
-                                   <% } %>
                             </div>
                             <% } %>
                             <% } %>
@@ -261,7 +247,6 @@
                                 </li>
                                 <li class="l-collect__item">
                                     <%= Button.FocusButtonHtml %>
-
                                 </li>
                                 <li class="l-collect__item">
                                     <%= Button.CompareButtonHtml %>
