Update:搜尋框有輸入的情況下調整成ETF商品代碼排序

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/EtfSearchIndex.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/EtfSearchIndex.cshtml
@@ -537,7 +537,7 @@
                                 return new RegExp(query, 'gi').test(item.value);
                             });
 
-                            result.sort((a, b) => (a.value > b.value ? 1 : -1));
+                            result.sort((a, b) => a.value.split(' ')[1].localeCompare(b.value.split(' ')[1]));
                         }
 
                         done({
